--- a/Anchor.toml
+++ b/Anchor.toml
@@ -15,8 +15,9 @@ article_nft = "AGXjeAx1EeUjdvVsPhrLpEcwiD4ngnDwzcr5C8ykJ4Jz"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
-wallet = "/home/ztgx/.config/solana/id.json"
+# cluster = "devnet"
+cluster = "Localnet"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
@@ -24,8 +25,8 @@ test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
 [test]
 startup_wait = 10000
 
-[test.validator]
-url = "https://api.devnet.solana.com"
+# [test.validator]
+# url = "https://api.devnet.solana.com"
 
-[[test.validator.clone]]
-address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
+# [[test.validator.clone]]
+# address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
