--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,11 +5,8 @@ seeds = false
 skip-lint = false
 resolution = true
 
-# [programs.devnet]
-# article_nft = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
-
-# [programs.localnet]
-# article_nft = "AGXjeAx1EeUjdvVsPhrLpEcwiD4ngnDwzcr5C8ykJ4Jz"
+[programs.devnet]
+article_nft = "CdYjgMV8mkM3NUUFSabXFCWazrsVLRWwCYGnWTU8w8zx"
 
 [programs.localnet]
 article_nft = "CdYjgMV8mkM3NUUFSabXFCWazrsVLRWwCYGnWTU8w8zx"
@@ -28,8 +25,8 @@ test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
 [test]
 startup_wait = 10000
 
-# [test.validator]
-# url = "https://api.devnet.solana.com"
+[test.validator]
+url = "https://api.devnet.solana.com"
 
-# [[test.validator.clone]]
-# address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
+[[test.validator.clone]]
+address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
